--- a/demo/styles/main.css
+++ b/demo/styles/main.css
@@ -200,17 +200,17 @@ select {
   height: 2.5rem;
   line-height: 2.5rem;
   font-size: 1.2rem;
-  color: #333333;
+  color: #333;
   text-align: center;
-  border: 1px solid #333333;
+  border: 1px solid #333;
   border-radius: 0.3rem;
   background-color: transparent;
   cursor: pointer;
   outline: none;
 }
 .btn:active {
-  background-color: #333333;
-  color: #ffffff;
+  background-color: #333;
+  color: #fff;
 }
 .btn.btn-primary {
   border-color: #099fde;
@@ -226,9 +226,9 @@ select {
   height: 2.5rem;
   line-height: 2.5rem;
   font-size: 1.2rem;
-  color: #333333;
+  color: #333;
   text-align: center;
-  background-color: #ffffff;
+  background-color: #fff;
   border-radius: 0.3rem;
   border: none;
   cursor: pointer;
@@ -269,7 +269,7 @@ select {
   width: 100%;
   height: 9.5rem;
   padding: 1rem;
-  background-color: #ffffff;
+  background-color: #fff;
 }
 .item-horizontal > a {
   position: relative;
@@ -333,7 +333,7 @@ select {
   width: 100%;
   height: 9.5rem;
   padding: 1rem 0.8rem;
-  background-color: #ffffff;
+  background-color: #fff;
 }
 .item-horizontal-compact > a {
   display: block;
@@ -409,7 +409,7 @@ select {
   width: 30.5555%;
   height: auto;
   padding: 0;
-  background-color: #ffffff;
+  background-color: #fff;
 }
 .item-vertical > a {
   display: block;
@@ -575,7 +575,7 @@ select {
   padding-left: 3.7rem;
 }
 .list-vertical .list-item:not(:last-child) .text {
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid #ccc;
 }
 .list-vertical .icon {
   position: absolute;
@@ -690,22 +690,17 @@ select {
   background-color: #efefef;
 }
 .cy-nav .cy-nav-items {
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-flex-wrap: nowrap;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
-  -webkit-align-items: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
   height: 100%;
 }
 .cy-nav .cy-nav-item {
-  -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
   height: 100%;
